# cpp_blockchain

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: cpp_flags.cmake  installdeps.cmake
code/: CMakeLists.txt
code/blockchain_server/: CMakeLists.txt
code/blockchain_server/src/: main.cpp
code/blockchain_server/src/server/: listener.cpp  listener.hpp
code/my_blockchain/: CMakeLists.txt
code/my_blockchain/public/centor/: block.hpp  blockchain.hpp  blockchain_handling_exception.hpp
code/my_blockchain/public/my_blockchain/: blockchain.hpp
code/my_blockchain/src/: block.cpp  block.hpp  blockchain.cpp  blockchain.hpp  blockchain_handling_exception.hpp  main.cpp
code/my_blockchain/src/centor/: block.cpp  blockchain.cpp
code/my_blockchain/tests/: CMakeLists.txt
code/my_blockchain/tests/src/: block_tests.cpp  blockchain_tests.cpp
code/tools/: CMakeLists.txt  README.md
code/tools/public/centor/tools/: platform.h  warning_disabler.hpp
docker/: Dockerfile  docker-compose.yml
script/: ubuntu_setup_base.sh  ubuntu_setup_devenv.sh
